--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -13,8 +13,8 @@ author_profile: true
 {% endfor %}
 
 <br><br>
-<h1>Mentorship</h1>
+<h1>Ed Technology</h1>
 <ul>
-  <li><em>Graduate Student Mentor</em>, CS, UW Madison</li>
-  <li><em>Undergraduate Student Mentor</em>, ACA, CSE, IIT Kanpur</li>
+  <li><em>Content Developer</em>, Bengaluru, IND</li>
+  <a href="https://www.opendooreducation.in/">Openddor Education</a>
 </ul>
