--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -16,5 +16,5 @@ author_profile: true
 <h1>Ed Technology</h1>
 <ul>
   <li><em>Content Developer</em>, Bengaluru, IND</li>
-  <a href="https://www.opendooreducation.in/">Openddor Education</a>
+  <li><a href="https://www.opendooreducation.in/">Opendoor Education</a></li>
 </ul>
