--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -13,8 +13,8 @@ author_profile: true
 {% endfor %}
 
 <br><br>
-<h1>Ed Technology</h1>
+<h1>Ed Tech</h1>
 <ul>
   <li><em>Content Developer</em>, Bengaluru, IND</li>
-  <li><a href="https://www.opendooreducation.in/">Opendoor Education</a></li>
+  <li><a href="https://www.opendooreducation.in/">Opendoor Education (Aug' 20- July '22)</a></li>
 </ul>
